# language-modeling-from-scratch

assignment1-basics/: .gitignore  profile.html  profile.json  pyproject.toml
assignment1-basics/cs336_basics/: checkpointing.py  data_loading.py  decoding.py  experiment_log.py  tokenizer.py  train_bpe.py  training.py
assignment1-basics/results/: merges_tinystories.json  vocab_tinystories.json
assignment1-basics/tests/: adapters.py
assignment2-systems/: results.txt
assignment2-systems/cs336_systems/: attention.py  benchmarking_mixed_precision.py  benchmarking_script.py  ddp_bucketed_benchmarking.py  ddp_overlap_bucketed.py  ddp_overlap_individual_parameters.py  ddp_overlap_individual_parameters_benchmarking.py  distributed_communication_single_node.py  flash_benchmarking.py  flash_forward.py  minimal_ddp_flat_benchmarking.py  mixed_precision_accumulation.py  naive_ddp.py  naive_ddp_benchmarking.py  optimizer_state_sharding.py  optimizer_state_sharding_accounting.py
assignment2-systems/tests/: adapters.py  test_attention.py  test_ddp.py  test_ddp_individual_parameters.py
assignment3-scaling/: pyproject.toml
assignment3-scaling/cs336_scaling/: chinchilla_isoflops.ipynb
assignment4-data/: pyproject.toml
assignment4-data/cs336_data/: __init__.py  exact_deduplication.py  extract_text.py  filter_data.py  gopher_quality_filters.py  harmful_content.py  language_identification.py  mask_pii.py  minhash_deduplication.py  quality_classifier.py  tokenize_data.py
assignment4-data/tests/: adapters.py  test_pii.py  test_quality.py
assignment5-alignment/: rough.ipynb
(+47 files in other folders)
